--- a/package.json
+++ b/package.json
@@ -16,18 +16,20 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@libsql/client": "^0.15.10",
     "@mui/icons-material": "^6.1.9",
     "@mui/material": "^6.1.9",
     "@mui/x-data-grid": "^7.22.4",
+    "@supabase/supabase-js": "^2.53.0",
     "@tanstack/react-query": "^5.84.1",
     "@tanstack/react-query-devtools": "^5.84.1",
+    "@types/pg": "^8.15.5",
     "deck.gl": "^9.1.14",
     "dotenv": "^17.2.1",
     "framer-motion": "^12.0.0",
     "lodash": "^4.17.21",
     "mapbox-gl": "^3.14.0",
     "next": "15.4.5",
+    "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.54.0",
