feat: enhance TypeScript configuration and refactor layout structure
- Enabled strict type checking in tsconfig.json for improved type safety.
- Introduced new TypeScript options: noUncheckedIndexedAccess, exactOptionalPropertyTypes, and noImplicitReturns.
- Refactored layout component to utilize a Providers component for better context management and cleaner code.
- Updated API routes to utilize jsonWithETag for efficient caching and response handling.
- Improved error handling and data validation in various API endpoints.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,10 @@
     ],
     "allowJs": true,
     "skipLibCheck": true,
-    "strict": false,
+    "strict": true,
+    "noUncheckedIndexedAccess": true,
+    "exactOptionalPropertyTypes": true,
+    "noImplicitReturns": true,
     "noEmit": true,
     "incremental": true,
     "module": "esnext",
